<resources>
    <string name="app_name">ImageScore</string>
    <string name="error_photo_load">Error while pick photo</string>
    <string name="denied">Permission denied</string>
    <string name="imageDate">Date: %s</string>
    <string name="imageStorageSize">Storage size: %s B</string>
    <string name="imageHeight">Height: %s px</string>
    <string name="imageWidth">Width: %s px</string>
    <string name="imageFileFormat">File format: %s</string>
    <string name="editTitleText">Change image title:</string>
    <string name="imageTitle">Title</string>
    <string name="cancel">Cancel</string>
    <string name="apply">APPLY</string>
    <string name="share_subject">image</string>
</resources>
