<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:clickable="true"
    android:focusable="true"
    android:paddingBottom="20dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/closeIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/editTitleText"
        android:textColor="@color/greyText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/imageTitle"
            android:inputType="text"
            android:maxLength="25"
            android:paddingBottom="18dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cancelB"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/cancel"
        android:textColor="@color/greenMain"
        app:layout_constraintEnd_toStartOf="@id/gLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleIL" />

    <Button
        android:id="@+id/applyB"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:enabled="true"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/apply"
        android:textColor="@color/greenMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gLine"
        app:layout_constraintTop_toBottomOf="@+id/titleIL" />

</androidx.constraintlayout.widget.ConstraintLayout>